--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "axios": "^1.3.5",
     "pinia": "^2.0.32",
+    "sinon": "^15.0.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.16",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.3.2",
+    "cypress": "^12.10.0",
     "vite": "^4.1.4"
   }
 }
